--- a/POOO-EXOS/training.html
+++ b/POOO-EXOS/training.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Training - POO Js</title>
 </head>
 <body>
+    <h1>Exercices sur le POO en Javascript</h1>
     
 
 
-
-    <script src="10-Protypes.js"></script>
+    <script src="01-exo1.js"></script>
+    <script src="02-exo2.js"></script>
 </body>
 </html>
