--- a/POOO-EXOS/training.html
+++ b/POOO-EXOS/training.html
@@ -10,8 +10,12 @@
     
 
 
-    <script src="01-exo1.js"></script>
-    <script src="02-exo2.js"></script>
+    <!-- <script src="01-exo1.js"></script>
+    <script src="02-exo2.js"></script> -->
+    <script src="06-exo6.js"></script>
+    <script src="07-exo7.js"></script>
+    <script src="08-exo8.js"></script>
+    <script src="10-exo10.js"></script>
     
 </body>
 </html>
